# Proofline

./: .gitignore
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: app.ts  index.ts
frontend/src/api/: prooflineApi.ts
frontend/src/components/: Editor.ts  ErrorPanel.ts  GoalsPanel.ts  HolesPanel.ts
frontend/src/models/: ProofState.ts
frontend/src/styles/: main.css
frontend/src/utils/: apiUtils.ts  holeUtils.ts  parserUtils.ts
proofline/: CHANGELOG.md  LICENSE  cabal.project  example.pl  proofline.cabal  taste1.txt  test.txt  test1.txt  test2.txt
proofline/app/: Main.hs
proofline/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
proofline/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  proofline-0.1.0.0-inplace.conf
proofline/examples/: Examples.hs  errors.pl  id.pl  let.pl  pair.pl  starting.pl  taste2.pl  unsolvedholes.pl
proofline/proofs/: proof.pl  proof1.pl
proofline/src/: API.hs  Common.hs  Context.hs  Display.hs  Elaboration.hs  Errors.hs  MainTest.hs  Metacontext.hs  Presyntax.hs  Pretty.hs  Syntax.hs  Unification.hs  Value.hs
proofline/src/Proofline/: API.hs  Context.hs  Display.hs  Evaluation.hs  MainTest.hs  Parser.hs  Presyntax.hs  Pretty.hs  Unification.hs
proofline/test/: APISpec.hs  ElaborationSpec.hs  Instances.hs  IntegrationSpec.hs  ParserSpec.hs  Spec.hs  UnificationSpec.hs
proofline/test/Examples/: dependent_types.pl  holes.pl  identity.pl
proofline/test_proofs/: complex.pl
