cabal-version:       3.0
name:                proofline
version:             0.1.0.0
license:             MIT
author:              Zhenyun Yin
maintainer:          yinzhenyun9@gmail.com
build-type:          Simple

common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       
    base >= 4.7 && < 5,
    containers,
    megaparsec,
    mtl

library
  import:              common-options
  hs-source-dirs:      src/Proofline
  other-modules:       
    Common
    Context
    Errors
    Evaluation
    Metacontext
    Pretty
    Elaboration
    Unification
    Syntax
    Value
    Presyntax
    Display
  exposed-modules:     
    Parser
    MainTest
    API
  build-depends:    
        base ^>=4.17.0.0,
        servant,
        servant-server,
        aeson,
        warp,
        wai-cors,
        text,
        directory,  
        filepath,
        aeson,
        bytestring,
        temporary >= 1.3,
        process


executable proofline
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       
    proofline
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N