cabal-version:       3.0
name:                proofline
version:             0.1.0.0
license:             MIT
author:              Zhenyun Yin
maintainer:          yinzhenyun9@gmail.com
build-type:          Simple

common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                      containers,
                      megaparsec,
                      mtl

library
  import:              common-options
  hs-source-dirs:      src
  -- Make all modules exposed
  exposed-modules:     Parser
                      ,MainTest
                      ,API
                      ,Common
                      ,Context
                      ,Display
                      ,Errors
                      ,Evaluation
                      ,Metacontext
                      ,Elaboration
                      ,Unification
                      ,Syntax
                      ,Value
                      ,Presyntax
                      ,Pretty
  build-depends:       base ^>=4.17.0.0,
                      servant,
                      servant-server,
                      aeson,
                      warp,
                      wai-cors,
                      text,
                      directory,
                      filepath,
                      aeson,
                      bytestring,
                      temporary >= 1.3,
                      process

executable proofline
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       proofline
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite proofline-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserSpec
                      ,ElaborationSpec
                      ,UnificationSpec
                      ,APISpec
                      ,IntegrationSpec
                      ,Instances
  build-depends:       proofline,
                      hspec >= 2.7.0,
                      hspec-wai,
                      hspec-wai-json,
                      QuickCheck >= 2.13.0,
                      aeson,
                      bytestring,
                      text,
                      wai,
                      wai-extra,
                      http-types,
                      servant-server,
                      warp,
                      directory,
                      filepath
  build-tool-depends:  hspec-discover:hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-name-shadowing